--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -10,3 +11,4 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+nginx-i2c
