--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
           name: Verify output
           command: |
-            ./work/nginx-i2c -o ./t/ip2country.conf
+            ./work/nginx-i2c -t ${MAXMIND_LICENSE} -o ./t/ip2country.conf
             test $(wc -l <./t/ip2country.conf) -ge 10000
       - persist_to_workspace:
           root: ./t
