--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 version: 2
 
 jobs:
+  test:
+    docker:
+      - image: quay.io/cybozu/golang:1.20-jammy
+    steps:
+      - checkout
+      - run: make test
   build:
     docker:
       - image: quay.io/cybozu/golang:1.20-jammy
@@ -35,7 +41,10 @@ workflows:
   version: 2
   built-and-test:
     jobs:
-      - build
+      - test
+      - build:
+          requires:
+            - test
       - test-nginx:
           requires:
             - build
